--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -2,6 +2,7 @@ main {
   width: calc(100% - 42rem);
   position: absolute;
   right: 0;
+  overflow: hidden;
 
   // targeting all sections in main
   section {
